--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -3,37 +3,34 @@
     <div class="container">
         <div class="section-content">
             <div class="row">
-                <div class="col-sm-5 img-bg d-flex align-items-center justify-content-center justify-content-md-end img-2" style='background-image: url({{ "img/hero-2.jpg" | absURL }});'>
+                <div class="col-sm-5 img-bg d-flex align-items-center justify-content-center justify-content-md-end img-2" style='background-image: url({{ "images/secadero1.jpg" | absURL }});'>
                 </div>
                 <div class="col-sm-7 py-5 pl-md-0 pl-4">
                     <div class="heading-section pl-lg-5 ml-md-5">
                       <h2>
                           Sobre nosotros
                       </h2>
-                        <span class="subheading">
-                            Jamones y curados - Elaboración propia
-                        </span>
                     </div>
                     <div class="pl-lg-5 ml-md-5">
-                        <p>Con más de medio siglo de historia, seguimos elaborando nuestros jamones de la manera tradicional, con curaciones lentas y un secado natural. Elaboramos, además, productos curados como la panceta, el torrezno o la caña de lomo. AQUI FALTA TEXTO POR RELLENAR.</p>
-                        <h3 class="mt-5">QUE PONER AQUÍ</h3>
+                        <p class="whatever1">Con más de medio siglo de historia, seguimos elaborando nuestros jamones de la manera tradicional, con curaciones lentas y un secado natural. Elaboramos, además, productos curados como la panceta, el torrezno o la caña de lomo. Desde nuestras instalaciones en Cuarte de Huerva envíamos producto a toda España, seleccionando las mejores piezas para nuestra charcutería.</p>
+                        <h3 class="mt-5">Lo de casa</h3>
                         <div class="row">
                             <div class="col-4">
                                 <a href="#" class="thumb-menu">
-                                    <img class="img-fluid img-cover" src='{{"img/hero-1.jpg" | absURL }}' />
-                                    <h6>texto de EJEMPLO</h6>
+                                    <img class="img-fluid img-cover" src='{{"images/about1.png" | absURL }}' />
+                                    <h6>Panceta curada</h6>
                                 </a>
                             </div>
                             <div class="col-4">
                                 <a href="#" class="thumb-menu">
-                                    <img class="img-fluid img-cover" src='{{"img/hero-3.jpg" | absURL }}' />
-                                    <h6>texto de EJEMPLO</h6>
+                                    <img class="img-fluid img-cover" src='{{"images/about2.png" | absURL }}' />
+                                    <h6>Jamón Gran Reserva</h6>
                                 </a>
                             </div>
                             <div class="col-4">
                                 <a href="#" class="thumb-menu">
-                                    <img class="img-fluid img-cover" src='{{"img/hero-4.jpg" | absURL }}'/>
-                                    <h6>texto de EJEMPLO</h6>
+                                    <img class="img-fluid img-cover" src='{{"images/about3.png" | absURL }}'/>
+                                    <h6>Lomo y cabezada curados</h6>
                                 </a>
                             </div>
                         </div>
