--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,35 +1,24 @@
-<footer class="mastfoot pb-5 section-padding pb-0">
+<footer class="mastfoot">
     <div class="inner container">
          <div class="row">
-         	<div class="col-lg-4">
+         	<div class="col-lg-4 hello1">
          		<div class="footer-widget pr-lg-5 pr-0">
-         			<img src="{{ .Site.Params.logo | absURL }}" class="img-fluid footer-logo mb-3" alt="">
-	         		<p>Jamones Villarroya TEXTO AQUI TEXTO AQUI</p>
-	         		<nav class="nav nav-mastfoot justify-content-start">
-		                <a class="nav-link" href="{{.Site.Params.facebook}}">
-		                	<i class="fab fa-facebook-f"></i>
-		                </a>
-		                <a class="nav-link" href="{{.Site.Params.twitter}}">
-		                	<i class="fab fa-twitter"></i>
-		                </a>
-		                <a class="nav-link" href="{{.Site.Params.instagram}}">
-		                	<i class="fab fa-instagram"></i>
-		                </a>
-		            </nav>
+         			<img src="{{ .Site.Params.logo | absURL }}" class="img-fluid footer-logo" alt="">
+	         		<p>Puedes realizar tu pedido llamando al 976416351 y recoger tu pedido en tienda en menos de 2hr. Te esperamos!</p>
          		</div>
 
          	</div>
-         	<div class="col-lg-4">
+         	<div class="col-lg-4 hello">
          		<div class="footer-widget px-lg-5 px-0">
-         			<h4>Open Hours</h4>
+         			<h3>Horario apertura</h3>
 	         		<ul class="list-unstyled open-hours">
-		                <li class="d-flex justify-content-between"><span>Monday</span><span>9:00 - 24:00</span></li>
-		                <li class="d-flex justify-content-between"><span>Tuesday</span><span>9:00 - 24:00</span></li>
-		                <li class="d-flex justify-content-between"><span>Wednesday</span><span>9:00 - 24:00</span></li>
-		                <li class="d-flex justify-content-between"><span>Thursday</span><span>9:00 - 24:00</span></li>
-		                <li class="d-flex justify-content-between"><span>Friday</span><span>9:00 - 02:00</span></li>
-		                <li class="d-flex justify-content-between"><span>Saturday</span><span>9:00 - 02:00</span></li>
-		                <li class="d-flex justify-content-between"><span>Sunday</span><span> Closed</span></li>
+		                <li class="d-flex justify-content-between"><span>Lunes</span><span>8:30 - 14:30</span></li>
+		                <li class="d-flex justify-content-between"><span>martes</span><span>8:30 - 14:30</span></li>
+		                <li class="d-flex justify-content-between"><span>Miércoles</span><span>8:30 - 14:30</span></li>
+		                <li class="d-flex justify-content-between"><span>Jueves</span><span>8:30 - 14:30</span></li>
+		                <li class="d-flex justify-content-between"><span>Viernes</span><span>8:30 - 20:00</span></li>
+		                <li class="d-flex justify-content-between"><span>Sábado</span><span>8:30 - 14:30</span></li>
+		                <li class="d-flex justify-content-between"><span>Domingo</span><span> Cerrado</span></li>
 		              </ul>
          		</div>
 
@@ -43,15 +32,16 @@
 </div>
 </div>
 	<!-- External JS -->
-	<script src="{{ "js/jquery.min.js" | absURL }}"></script>
-	<script src="{{ "js/moment.min.js" | absURL }}"></script>
-	<script src="{{ "vendor/bootstrap/popper.min.js" | absURL }}"></script>
-	<script src="{{ "vendor/bootstrap/bootstrap.min.js" | absURL }}"></script>
-	<script src="{{ "vendor/select2/select2.min.js" | absURL}}"></script>
-	<script src="{{ "vendor/owlcarousel/owl.carousel.min.js" | absURL}}"></script>
-	<script src="{{ "js/featherlight.min.js" | absURL}}" ></script>
+	<script src="{{ "js/jquery.min.js" | absURL }}" type="text/javascript" charset="utf-8"></script>
+	<script src="{{ "js/moment.min.js" | absURL }}" type="text/javascript" charset="utf-8"></script>
+	<script src="{{ "vendor/bootstrap/popper.min.js" | absURL }}" type="text/javascript" charset="utf-8"></script>
+	<script src="{{ "vendor/bootstrap/bootstrap.min.js" | absURL }}" type="text/javascript" charset="utf-8"></script>
+	<script src="{{ "vendor/select2/select2.min.js" | absURL}}" type="text/javascript" charset="utf-8"></script>
+	<script src="{{ "vendor/owlcarousel/owl.carousel.min.js" | absURL}}" type="text/javascript" charset="utf-8"></script>
+	<script src="{{ "js/featherlight.min.js" | absURL}}" type="text/javascript" charset="utf-8" ></script>
 	<script src="{{ "vendor/stellar/jquery.stellar.js" | absURL}}" type="text/javascript" charset="utf-8"></script>
-	<script src="{{ "js/tempusdominus-bootstrap-4.min.js" | absURL}}" ></script>
+	<script src="{{ "js/tempusdominus-bootstrap-4.min.js" | absURL}}" type="text/javascript" charset="utf-8" ></script>
+  <script src="{{ "js/shuffle.min.js" | absURL}}" type="text/javascript" charset="utf-8" ></script>
 	{{if .IsHome }}
 	<!--Main JS -->
 	<script src="{{ "js/app.min.js"  | absURL}}"></script>
