--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -6,29 +6,23 @@
               Charcutería Villarroya
             </h3>
           </a>
-
-
-
             <div class="navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav d-flex">
                     <div class="d-flex flex-lg-row flex-column">
                         <li class="nav-item active">
-                            <a class="nav-link" href="{{ .Site.BaseURL }}#gtco-menu">Servicios</a>
+                            <a class="nav-link" href="{{ .Site.BaseURL }}#services">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ .Site.BaseURL }}#gtco-welcome">About</a>
+                            <a class="nav-link" href="{{ .Site.BaseURL }}#gtco-welcome">Conócenos</a>
                         </li>
                         <li class="nav-item dropdown">
-                              <a class="nav-link" href="{{ .Site.BaseURL }}#gtco-menu">NIIDEA</a>
+                              <a class="nav-link" href="{{ .Site.BaseURL }}#gtco-special-dishes">Especialidades</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="{{ .Site.BaseURL }}#gtco-menu">Ofertas</a>
+                            <a class="nav-link" href="{{ .Site.BaseURL }}#portfolio">Ofertas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ .Site.BaseURL }}#gtco-welcome">Artículos</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                              <a class="nav-link" href="{{ .Site.BaseURL }}#gtco-menu">Contacta</a>
+                            <a class="nav-link" href="{{ .Site.BaseURL }}#gtco-reservation">Contacto</a>
                         </li>
                     </div>
                 </ul>
