--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -22,6 +22,7 @@
 					data-toggle="buttons">
 					<label class="btn active">
 						<input type="radio" name="shuffle-filter" value="all" checked="checked" />{{ i18n "all"}}
+						Todos
 					</label>
 					{{ $categories := slice }}
 					{{ range .portfolio_item }}
