--- a/layouts/partials/special.html
+++ b/layouts/partials/special.html
@@ -3,34 +3,31 @@
     <div class="container">
         <div class="section-content">
             <div class="heading-section text-center">
-                <h2>
-                    Special Dishes
-                </h2>
-                <span class="subheading">
-                    Specialties
-                </span>
+                <h1>
+                    Especialidades
+                </h1>
             </div>
             <div class="row mt-5">
                 <div class="col-lg-5 col-md-6 align-self-center py-5">
                     <h2 class="special-number">01.</h2>
                     <div class="dishes-text">
-                        <h3><span>Beef</span><br> Steak Sauce</h3>
-                        <p class="pt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, ea vero alias perferendis quas animi doloribus voluptates. Atque explicabo ea nesciunt provident libero qui eum, corporis esse quos excepturi soluta?</p>
+                        <h3><span>Quesos</span></h3>
+                        <p class="pt-3 textito">Más de 50 variedades de queso nacionales y de importación. Desde los mejores quesos curados de oveja hasta los quesos cremosos franceses, pasando por nuestro famoso Blue Stillton inglés. Pregúntanos y te aconsejaremos tu queso ideal.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 align-self-center mt-4 mt-md-0">
-                    <img src='{{ "img/steak.jpg" | absURL }}' alt="" class="img-fluid w-100">
+                    <img src='{{ "images/especial1.jpg" | absURL }}' alt="" class="img-fluid w-100">
                 </div>
             </div>
             <div class="row mt-5">
                 <div class="col-lg-4 col-md-6 align-self-center order-2 order-md-1 mt-4 mt-md-0">
-                    <img src='{{ "img/salmon-zucchini.jpg" | absURL }}' alt="" class="img-fluid w-100">
+                    <img src='{{ "images/especial3.jpg" | absURL }}' alt="" class="img-fluid w-100">
                 </div>
                 <div class="col-lg-5 col-md-6 align-self-center order-1 order-md-2 py-5">
                     <h2 class="special-number">02.</h2>
                     <div class="dishes-text">
-                        <h3><span>Salmon</span><br> Zucchini</h3>
-                        <p class="pt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, accusamus culpa quam amet ipsam odit ea doloremque accusantium quo, itaque possimus eius. In a quis quibusdam omnis atque vero dolores!</p>
+                        <h3><span>Curados</span></h3>
+                        <p class="pt-3 textito">En nuestra tienda encontrarás los mejores jamones, producidos de manera artesanal en nuestras instalaciones. Además de nuestro jamón Gran Reserva y jamon duroc, podrás encontrar jamón ibérico cordobés. La panceta curada y el torrezno son algunos de nuestro productos más vendidos.</p>
                     </div>
                 </div>
             </div>
@@ -38,47 +35,23 @@
                 <div class="col-lg-5 col-md-6 align-self-center py-5">
                     <h2 class="special-number">03.</h2>
                     <div class="dishes-text">
-                        <h3><span>Beef</span><br> Steak Sauce</h3>
-                        <p class="pt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, ea vero alias perferendis quas animi doloribus voluptates. Atque explicabo ea nesciunt provident libero qui eum, corporis esse quos excepturi soluta?</p>
+                        <h3><span>Embutidos</span></h3>
                     </div>
+                    <p class="pt-3 textito">Trabajamos desde hace más de 20 años con proveedores de confianza, ofreciendo productos tan conocidos como el chorizo de "La Hoguera" y el chorizo zamorano "Paulino Iglesias". Algunas de nuestras novedades son el chorizo con ajo negro o la longaniza trufada de Teruel. Otros productos famosos son la morcilla de Teruel y el salchichón ibérico.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 align-self-center mt-4 mt-md-0">
-                    <img src='{{ "img/steak.jpg" | absURL }}' alt="" class="img-fluid w-100">
+                    <img src='{{ "images/especial4.jpg" | absURL }}' alt="" class="img-fluid w-100">
                 </div>
             </div>
             <div class="row mt-5">
                 <div class="col-lg-4 col-md-6 align-self-center order-2 order-md-1 mt-4 mt-md-0">
-                    <img src='{{ "img/salmon-zucchini.jpg" | absURL }}' alt="" class="img-fluid w-100">
+                    <img src='{{ "images/especial2.jpg" | absURL }}' alt="" class="img-fluid w-100">
                 </div>
                 <div class="col-lg-5 col-md-6 align-self-center order-1 order-md-2 py-5">
                     <h2 class="special-number">04.</h2>
                     <div class="dishes-text">
-                        <h3><span>Salmon</span><br> Zucchini</h3>
-                        <p class="pt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, accusamus culpa quam amet ipsam odit ea doloremque accusantium quo, itaque possimus eius. In a quis quibusdam omnis atque vero dolores!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-lg-5 col-md-6 align-self-center py-5">
-                    <h2 class="special-number">05.</h2>
-                    <div class="dishes-text">
-                        <h3><span>Beef</span><br> Steak Sauce</h3>
-                        <p class="pt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, ea vero alias perferendis quas animi doloribus voluptates. Atque explicabo ea nesciunt provident libero qui eum, corporis esse quos excepturi soluta?</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 align-self-center mt-4 mt-md-0">
-                    <img src='{{ "img/steak.jpg" | absURL }}' alt="" class="img-fluid w-100">
-                </div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-lg-4 col-md-6 align-self-center order-2 order-md-1 mt-4 mt-md-0">
-                    <img src='{{ "img/salmon-zucchini.jpg" | absURL }}' alt="" class="img-fluid w-100">
-                </div>
-                <div class="col-lg-5 col-md-6 align-self-center order-1 order-md-2 py-5">
-                    <h2 class="special-number">06.</h2>
-                    <div class="dishes-text">
-                        <h3><span>Salmon</span><br> Zucchini</h3>
-                        <p class="pt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, accusamus culpa quam amet ipsam odit ea doloremque accusantium quo, itaque possimus eius. In a quis quibusdam omnis atque vero dolores!</p>
+                        <h3><span>Aves y cocidos</span></h3>
+                        <p class="pt-3 textito">Vendemos productos de cerdo, pavo y pollo. Intentamos  que nuestro productos sean de categoría extra, sin alérgenos y sin aditivos. Pregúntanos y te recomendaremos productos de régimen como el jamón de pavo o productos gourmet como la pechuga de pollo braseada en madera de haya. </p>
                     </div>
                 </div>
             </div>
